Fix: `WizardTemplate` balance greeting alignment

--- a/src/modules/pages/components/WizardTemplateColony/WizardTemplateColony.css
+++ b/src/modules/pages/components/WizardTemplateColony/WizardTemplateColony.css
@@ -30,7 +30,6 @@
 
 .address {
   display: flex;
-  justify-content: flex-end;
   justify-content: space-between;
   width: 185px;
   position: relative;
@@ -72,6 +71,7 @@
 }
 
 .hello {
+  margin-top: -3px;
   font-weight: var(--weight-normal);
 }
 
